choreonoid_add_simple_controller(MonoCrawlerJoystickController MonoCrawlerJoystickController.cpp)
choreonoid_add_simple_controller(StorageController StorageController.cpp)
choreonoid_add_simple_controller(BreakerBoxController1 BreakerBoxController1.cpp)
choreonoid_add_simple_controller(BreakerBoxController2 BreakerBoxController2.cpp)
choreonoid_add_simple_controller(Jaco2Controller1 Jaco2Controller1.cpp)
choreonoid_add_simple_controller(Jaco2Controller2 Jaco2Controller2.cpp)

if(BUILD_SCENE_EFFECTS_PLUGIN)
  choreonoid_add_simple_controller(FireController1 FireController1.cpp)
  target_link_libraries(FireController1 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(FireController2 FireController2.cpp)
  target_link_libraries(FireController2 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(HoseNozzleController1 HoseNozzleController1.cpp)
  target_link_libraries(HoseNozzleController1 FireController1)
  choreonoid_add_simple_controller(HoseNozzleController2 HoseNozzleController2.cpp)
  target_link_libraries(HoseNozzleController2 FireController2)

  choreonoid_add_simple_controller(LeakedLineController1 LeakedLineController1.cpp)
  target_link_libraries(LeakedLineController1 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController2 LeakedLineController2.cpp)
  target_link_libraries(LeakedLineController2 CnoidSceneEffectsPlugin)
  choreonoid_add_simple_controller(LeakedLineController3 LeakedLineController3.cpp)
  target_link_libraries(LeakedLineController3 CnoidSceneEffectsPlugin)
endif()